* temporarily changed container to run using flask server. * added and experimented with pytest. * did a rough break out of DB tests versus schema tests but the test   suite will need more clean-up.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,27 @@
-version: '2'
+version: '3.7'
 services:
-  valkyrie:
-    container_name: valkyrie
-    image: christopherbianchi/simple-flask-py2:0.1
+  valkyrie-rest:
+    container_name: valkyrie-rest
+    build:
+      context: .
+    image: valkyrie-rest:1
     ports:
       - "80:80"
       - "5000:5000"
     volumes:
-      - ~/Documents/Fun/Valkyrie/valkyrie-rest/source:/flask-app
+      - ./source:/usr/src/app
     depends_on:
-      - db
-  db:
-    container_name: db
+      - valkyrie-db
+    env_file:
+      - ./env_files/config.env
+    # stdin_open: true
+    # tty: true
+
+  valkyrie-db:
+    container_name: valkyrie-db
     image: mysql:8.0.3
     volumes:
-      - ~/Documents/Fun/Valkyrie/valkyrie-rest/data/datastore:/var/lib/mysql
+      - ./data/datastore:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=dancer
       - MYSQL_DATABASE=valkyrie
