--- a/source/requirements.txt
+++ b/source/requirements.txt
@@ -1,6 +1,6 @@
-flask==0.12.1
-marshmallow==2.15.0
+factory_boy==2.11.1
+flask==1.0.2
+marshmallow==2.16.3
 mysql-connector-python==8.0.5
-SQLAlchemy==1.1.15
-unittest2==1.1.0
-uWSGI==2.0.12
+pytest==3.10.0
+SQLAlchemy==1.2.13
